--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "steamid": "2.0.0",
     "winston": "3.3.3"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "prettier": "^3.4.2"
+  }
 }
