--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   "dependencies": {
     "colors": "1.4.0",
     "console-master": "^1.0.3",
-    "forever": "3.0.2",
+    "forever": "^1.0.1",
     "jsonfile": "6.0.1",
     "lodash": "4.17.21",
-    "moment": "2.28.0",
+    "moment": "^2.30.1",
     "node-fetch": "^2.6.0",
     "path": "0.12.7",
     "request": "2.88.2",
     "scb-diagnostics": "^1.0.1",
     "steam-totp": "^2.1.2",
     "steam-tradeoffer-manager": "^2.11.4",
-    "steam-user": "5.0.4",
+    "steam-user": "^5.0.4",
     "steamcommunity": "^3.48.0",
-    "steamid": "2.0.0",
+    "steamid": "^2.0.0",
     "winston": "3.3.3"
   },
   "private": true,
